# cache_sniper

./: .gitignore  Cargo.toml  README.md
src/: cache_checker.rs  http_client.rs  lib.rs  main.rs  metrics.rs  utils.rs  validate_cache.rs
tests/: cache_checker_tests.rs
