[package]
name = "cache_sniper"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7.0"
colored = "2.0"
prometheus = "0.13"
warp = "0.3"
futures = "0.3"
lazy_static = "1.4"
