[package]
name = "cache_sniper"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
comfy-table = "7.0"
warp = "0.3"  # Added warp dependency for Prometheus metrics
redis = "0.29.1"
